--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-"Hello World"
+<!doctype html>
+<html>
+  <head>
+    <title>This is stable page to redirect to real site</title>
+    <!--<meta http-equiv="refresh" content="0;URL=https://MeshInspector.github.io/MeshLib/html/index.html" />-->
+  </head>
+  <body>
+  	<p>Redirection to real site</p>
+  </body>
+</html>
